# evmlibfuzzer

./: .gitignore  Cargo.toml  README.md  bind.sh  build.sh
contract-bindings/src/: lib.rs  target.rs
contracts/src/: Target.sol
src/: main.rs
